// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/SensorCard Long Fields 1`] = `
<div
  className="max-w-[600px]"
>
  <a
    className="block focus-offset bg-white shadow border border-gray-200 group hover:animate-borderpulse cursor-pointer transition-all relative overflow-hidden group"
    href="/sensors/12"
    onClick={[Function]}
    onMouseEnter={[Function]}
    style={
      Object {
        "minHeight": 280,
      }
    }
  >
    <div
      className="absolute inset-0 bottom-auto lg:bottom-0 lg:left-auto lg:w-1/3 h-32 lg:h-full pointer-events-none transition overflow-hidden group-hover:opacity-60 bg-gray-50"
    >
      <div
        className="absolute right-0 bottom-0 left-0 h-1/2 pointer-events-none bg-gradient-to-t from-white z-30"
      />
      <div
        className="absolute inset-0 overflow-hidden z-40"
      >
        <svg
          className="overflow-visible absolute -bottom-1 -right-1 -left-1 text-purple group-hover:animate-textpulse"
          height={82}
          preserveAspectRatio="none"
          viewBox="0 0 100 82"
          width="104%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="visx-area-closed"
            d="M0,1.2283127572016452L5.263157894736842,75.12761904761905L10.526315789473683,69.68987654320988L15.789473684210526,73.32275132275133L21.052631578947366,5.061728395061733L26.31578947368421,0L31.57894736842105,6.4038095238095245L36.84210526315789,78.09716637272193L42.10526315789473,82L47.368421052631575,82L52.63157894736842,79.07287477954145L57.89473684210527,76.49283950617284L63.1578947368421,75.382151675485L68.42105263157895,81.83031158142269L73.68421052631578,76.99419165196943L78.94736842105263,72.48395061728395L84.21052631578947,69.44691358024691L89.47368421052632,69.58189300411523L94.73684210526315,73.51557907113462L100,28.301328630217522L100,82L94.73684210526315,82L89.47368421052632,82L84.21052631578947,82L78.94736842105263,82L73.68421052631578,82L68.42105263157895,82L63.1578947368421,82L57.89473684210527,82L52.63157894736842,82L47.368421052631575,82L42.10526315789473,82L36.84210526315789,82L31.57894736842105,82L26.31578947368421,82L21.052631578947366,82L15.789473684210526,82L10.526315789473683,82L5.263157894736842,82L0,82Z"
            fill="currentColor"
            fillOpacity="10%"
            shapeRendering="geometricPrecision"
            stroke="currentColor"
            strokeLinecap="round"
            strokeWidth={2}
            vectorEffect="non-scaling-stroke"
          />
        </svg>
      </div>
    </div>
    <div
      className="lg:w-2/3 transition group-hover:animate-textpulse px-4 pb-3 pt-36 lg:px-5 lg:py-4 relative z-10"
    >
      <div
        className="grid grid-cols-[24px,1fr] gap-3"
      >
        <span
          className="mt-[1px] inline-block bg-gray-50 w-6 h-6"
        >
          <img
            alt="Sensor Symbol 1"
            src="/images/sensor-symbols/1.svg"
          />
        </span>
        <h3
          className="text-xl leading-6 pt-1 lg:leading-7 lg:text-2xl lg:pt-0 font-headline font-bold inline"
        >
          When Array is given multiple arguments
        </h3>
      </div>
      <div
        className="pl-9 pt-2"
      >
        <p
          className="text-base mb-4 flex gap-x-1"
        >
          <svg
            className="mt-1"
            height="16"
            role="img"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 0a3 3 0 0 1 2.995 2.824L9 3l.001 5.124.128.117a4.48 4.48 0 0 1 1.344 2.761l.02.248.007.25c0 2.506-1.968 4.5-4.5 4.5-2.543 0-4.6-2.005-4.6-4.5 0-1.208.488-2.333 1.32-3.16l.17-.16.11-.094V3A3 3 0 0 1 5.65.02l.174-.015L6 0Zm0 2a1 1 0 0 0-.993.883L5 3v6.13l-.456.295A2.469 2.469 0 0 0 3.4 11.5C3.4 12.879 4.55 14 6 14c1.422 0 2.5-1.093 2.5-2.5 0-.786-.34-1.494-.916-1.957l-.148-.11L7 9.135 7 3a1 1 0 0 0-1-1Zm7 4a1 1 0 0 1 0 2h-2a1 1 0 1 1 0-2h2Zm0-4a1 1 0 0 1 0 2h-2a1 1 0 1 1 0-2h2Z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
          Temperatur
        </p>
        <p
          className="text-base"
        >
          @wdanxna when Array is given multiple arguments, it iterates over the arguments object and explicitl...
        </p>
        <p
          className="mt-4 mb-2 flex gap-2 flex-wrap"
        >
          <span
            className="inline-block truncate"
            style={
              Object {
                "maxWidth": "calc(100vw - 64px)",
              }
            }
          >
            <span
              className="mr-1.5 inline-block align-middle rounded-full border border-gray-50"
              role="img"
              style={
                Object {
                  "height": 21,
                  "width": 21,
                }
              }
            >
              <svg
                fill="none"
                height={20}
                viewBox="0 0 80 80"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <mask
                  height={80}
                  id="mask0"
                  mask-type="alpha"
                  maskUnits="userSpaceOnUse"
                  width={80}
                  x={0}
                  y={0}
                >
                  <rect
                    fill="white"
                    height={80}
                    rx={160}
                    width={80}
                  />
                </mask>
                <g
                  mask="url(#mask0)"
                >
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={20}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={40}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={60}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={10}
                  />
                  <rect
                    fill="#CFD0DC"
                    height={10}
                    width={10}
                    x={30}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={50}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={70}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    y={10}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    y={20}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    y={30}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    y={40}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    y={50}
                  />
                  <rect
                    fill="#F9FCFD"
                    height={10}
                    width={10}
                    y={60}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    y={70}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={20}
                    y={10}
                  />
                  <rect
                    fill="#100C53"
                    height={10}
                    width={10}
                    x={20}
                    y={20}
                  />
                  <rect
                    fill="#100C53"
                    height={10}
                    width={10}
                    x={20}
                    y={30}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={20}
                    y={40}
                  />
                  <rect
                    fill="#636188"
                    height={10}
                    width={10}
                    x={20}
                    y={50}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={20}
                    y={60}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={20}
                    y={70}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={40}
                    y={10}
                  />
                  <rect
                    fill="#CFD0DC"
                    height={10}
                    width={10}
                    x={40}
                    y={20}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={40}
                    y={30}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={40}
                    y={40}
                  />
                  <rect
                    fill="#CFD0DC"
                    height={10}
                    width={10}
                    x={40}
                    y={50}
                  />
                  <rect
                    fill="#100C53"
                    height={10}
                    width={10}
                    x={40}
                    y={60}
                  />
                  <rect
                    fill="#1E1A5A"
                    height={10}
                    width={10}
                    x={40}
                    y={70}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    x={60}
                    y={10}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={60}
                    y={20}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={60}
                    y={30}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    x={60}
                    y={40}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={60}
                    y={50}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={60}
                    y={60}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={60}
                    y={70}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={10}
                    y={10}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={10}
                    y={20}
                  />
                  <rect
                    fill="#787696"
                    height={10}
                    width={10}
                    x={10}
                    y={30}
                  />
                  <rect
                    fill="#F9FCFD"
                    height={10}
                    width={10}
                    x={10}
                    y={40}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={10}
                    y={50}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={10}
                    y={60}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    x={10}
                    y={70}
                  />
                  <rect
                    fill="#E7EAF2"
                    height={10}
                    width={10}
                    x={30}
                    y={10}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={30}
                    y={20}
                  />
                  <rect
                    fill="#100C53"
                    height={10}
                    width={10}
                    x={30}
                    y={30}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={30}
                    y={40}
                  />
                  <rect
                    fill="#100C53"
                    height={10}
                    width={10}
                    x={30}
                    y={50}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={30}
                    y={60}
                  />
                  <rect
                    fill="#E7EAF2"
                    height={10}
                    width={10}
                    x={30}
                    y={70}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    x={50}
                    y={10}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={50}
                    y={20}
                  />
                  <rect
                    fill="#4A4878"
                    height={10}
                    width={10}
                    x={50}
                    y={30}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={50}
                    y={40}
                  />
                  <rect
                    fill="#F9FCFD"
                    height={10}
                    width={10}
                    x={50}
                    y={50}
                  />
                  <rect
                    fill="#787696"
                    height={10}
                    width={10}
                    x={50}
                    y={60}
                  />
                  <rect
                    fill="#CFD0DC"
                    height={10}
                    width={10}
                    x={50}
                    y={70}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={70}
                    y={10}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={70}
                    y={20}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={70}
                    y={30}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={70}
                    y={40}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={70}
                    y={50}
                  />
                  <rect
                    fill="#CFD0DC"
                    height={10}
                    width={10}
                    x={70}
                    y={60}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={70}
                    y={70}
                  />
                </g>
              </svg>
            </span>
            Atahualpa Yupanqui De la Vega Van Hilde
          </span>
        </p>
      </div>
    </div>
  </a>
</div>
`;

exports[`Storyshots UI Elements/SensorCard Minimal Fields 1`] = `
<div
  className="max-w-[600px]"
>
  <a
    className="block focus-offset bg-white shadow border border-gray-200 group hover:animate-borderpulse cursor-pointer transition-all relative overflow-hidden group"
    href="/sensors/12"
    onClick={[Function]}
    onMouseEnter={[Function]}
    style={
      Object {
        "minHeight": 280,
      }
    }
  >
    <div
      className="absolute inset-0 bottom-auto lg:bottom-0 lg:left-auto lg:w-1/3 h-32 lg:h-full pointer-events-none transition overflow-hidden group-hover:opacity-60 bg-gray-50"
    >
      <div
        className="absolute right-0 bottom-0 left-0 h-1/2 pointer-events-none bg-gradient-to-t from-white z-30"
      />
      <div
        className="absolute inset-0 overflow-hidden z-40"
      >
        <svg
          className="overflow-visible absolute -bottom-1 -right-1 -left-1 text-purple group-hover:animate-textpulse"
          height={82}
          preserveAspectRatio="none"
          viewBox="0 0 100 82"
          width="104%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="visx-area-closed"
            d="M100,41L0,41L0,82L100,82Z"
            fill="currentColor"
            fillOpacity="10%"
            shapeRendering="geometricPrecision"
            stroke="currentColor"
            strokeLinecap="round"
            strokeWidth={2}
            vectorEffect="non-scaling-stroke"
          />
        </svg>
      </div>
    </div>
    <div
      className="lg:w-2/3 transition group-hover:animate-textpulse px-4 pb-3 pt-36 lg:px-5 lg:py-4 relative z-10"
    >
      <div
        className="grid grid-cols-[24px,1fr] gap-3"
      >
        <span
          className="mt-[1px] inline-block bg-gray-50 w-6 h-6"
        >
          <img
            alt="Sensor Symbol 32"
            src="/images/sensor-symbols/32.svg"
          />
        </span>
        <h3
          className="text-xl leading-6 pt-1 lg:leading-7 lg:text-2xl lg:pt-0 font-headline font-bold inline"
        >
          AOL
        </h3>
      </div>
      <div
        className="pl-9 pt-2"
      >
        <p
          className="text-base mb-4 flex gap-x-1"
        >
          <svg
            className="mt-1"
            height="16"
            role="img"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 0a8 8 0 0 1 7.784 9.856l-.08.305-.083.278-.14.402-.059.15-.075.18-.123.27-.114.23a8.005 8.005 0 0 1-.718 1.14l-.237.3-.198.229-.139.15-.14.146-.299.286-.238.208-.243.196-.148.112-.193.138-.112.076a8.008 8.008 0 0 1-.972.557l-.17.079-.356.152-.25.094-.336.112-.34.096-.337.08-.495.09-.205.028-.305.032-.166.012c-.17.01-.34.016-.513.016l-.258-.004-.32-.017-.2-.016-.206-.023-.264-.037-.276-.048-.355-.077-.276-.072-.42-.13-.304-.11-.253-.102a7.957 7.957 0 0 1-.982-.501l-.167-.103-.276-.184-.193-.138-.256-.198-.314-.265-.214-.198-.144-.141-.19-.197-.213-.24-.103-.123A8.012 8.012 0 0 1 .89 11.67l-.157-.321-.08-.178-.134-.33-.105-.294-.105-.336A8 8 0 0 1 8 0Zm0 2a6 6 0 0 0-5.658 8h11.316A6 6 0 0 0 8 2Zm2.643 1.755a1 1 0 0 1 .318 1.378l-2.12 3.392a1 1 0 0 1-1.695-1.06l2.12-3.392a1 1 0 0 1 1.377-.318ZM4 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2Zm8 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2ZM7 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2Z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
          Luftdruck
        </p>
        
        <p
          className="mt-4 mb-2 flex gap-2 flex-wrap"
        >
          <span
            className="inline-block truncate"
            style={
              Object {
                "maxWidth": "calc(100vw - 64px)",
              }
            }
          >
            <span
              className="mr-1.5 inline-block align-middle rounded-full border border-gray-50"
              role="img"
              style={
                Object {
                  "height": 21,
                  "width": 21,
                }
              }
            >
              <svg
                fill="none"
                height={20}
                viewBox="0 0 80 80"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <mask
                  height={80}
                  id="mask0"
                  mask-type="alpha"
                  maskUnits="userSpaceOnUse"
                  width={80}
                  x={0}
                  y={0}
                >
                  <rect
                    fill="white"
                    height={80}
                    rx={160}
                    width={80}
                  />
                </mask>
                <g
                  mask="url(#mask0)"
                >
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={20}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={40}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={60}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={10}
                  />
                  <rect
                    fill="#CFD0DC"
                    height={10}
                    width={10}
                    x={30}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={50}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={70}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    y={10}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    y={20}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    y={30}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    y={40}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    y={50}
                  />
                  <rect
                    fill="#F9FCFD"
                    height={10}
                    width={10}
                    y={60}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    y={70}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={20}
                    y={10}
                  />
                  <rect
                    fill="#100C53"
                    height={10}
                    width={10}
                    x={20}
                    y={20}
                  />
                  <rect
                    fill="#100C53"
                    height={10}
                    width={10}
                    x={20}
                    y={30}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={20}
                    y={40}
                  />
                  <rect
                    fill="#636188"
                    height={10}
                    width={10}
                    x={20}
                    y={50}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={20}
                    y={60}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={20}
                    y={70}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={40}
                    y={10}
                  />
                  <rect
                    fill="#CFD0DC"
                    height={10}
                    width={10}
                    x={40}
                    y={20}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={40}
                    y={30}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={40}
                    y={40}
                  />
                  <rect
                    fill="#CFD0DC"
                    height={10}
                    width={10}
                    x={40}
                    y={50}
                  />
                  <rect
                    fill="#100C53"
                    height={10}
                    width={10}
                    x={40}
                    y={60}
                  />
                  <rect
                    fill="#1E1A5A"
                    height={10}
                    width={10}
                    x={40}
                    y={70}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    x={60}
                    y={10}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={60}
                    y={20}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={60}
                    y={30}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    x={60}
                    y={40}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={60}
                    y={50}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={60}
                    y={60}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={60}
                    y={70}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={10}
                    y={10}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={10}
                    y={20}
                  />
                  <rect
                    fill="#787696"
                    height={10}
                    width={10}
                    x={10}
                    y={30}
                  />
                  <rect
                    fill="#F9FCFD"
                    height={10}
                    width={10}
                    x={10}
                    y={40}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={10}
                    y={50}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={10}
                    y={60}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    x={10}
                    y={70}
                  />
                  <rect
                    fill="#E7EAF2"
                    height={10}
                    width={10}
                    x={30}
                    y={10}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={30}
                    y={20}
                  />
                  <rect
                    fill="#100C53"
                    height={10}
                    width={10}
                    x={30}
                    y={30}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={30}
                    y={40}
                  />
                  <rect
                    fill="#100C53"
                    height={10}
                    width={10}
                    x={30}
                    y={50}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={30}
                    y={60}
                  />
                  <rect
                    fill="#E7EAF2"
                    height={10}
                    width={10}
                    x={30}
                    y={70}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    x={50}
                    y={10}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={50}
                    y={20}
                  />
                  <rect
                    fill="#4A4878"
                    height={10}
                    width={10}
                    x={50}
                    y={30}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={50}
                    y={40}
                  />
                  <rect
                    fill="#F9FCFD"
                    height={10}
                    width={10}
                    x={50}
                    y={50}
                  />
                  <rect
                    fill="#787696"
                    height={10}
                    width={10}
                    x={50}
                    y={60}
                  />
                  <rect
                    fill="#CFD0DC"
                    height={10}
                    width={10}
                    x={50}
                    y={70}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={70}
                    y={10}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={70}
                    y={20}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={70}
                    y={30}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={70}
                    y={40}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={70}
                    y={50}
                  />
                  <rect
                    fill="#CFD0DC"
                    height={10}
                    width={10}
                    x={70}
                    y={60}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={70}
                    y={70}
                  />
                </g>
              </svg>
            </span>
            Atahualpa Yupanqui De la Vega Van Hilde
          </span>
        </p>
      </div>
    </div>
  </a>
</div>
`;

exports[`Storyshots UI Elements/SensorCard No Map 1`] = `
<div
  className="max-w-[600px]"
>
  <a
    className="block focus-offset bg-white shadow border border-gray-200 group hover:animate-borderpulse cursor-pointer transition-all relative overflow-hidden group"
    href="/sensors/12"
    onClick={[Function]}
    onMouseEnter={[Function]}
    style={
      Object {
        "minHeight": 280,
      }
    }
  >
    <div
      className="absolute inset-0 bottom-auto lg:bottom-0 lg:left-auto lg:w-1/3 h-32 lg:h-full pointer-events-none transition overflow-hidden group-hover:opacity-60 bg-gray-50"
    >
      <div
        className="absolute right-0 bottom-0 left-0 h-1/2 pointer-events-none bg-gradient-to-t from-white z-30"
      />
      <div
        className="absolute inset-0 overflow-hidden z-40"
      >
        <svg
          className="overflow-visible absolute -bottom-1 -right-1 -left-1 text-purple group-hover:animate-textpulse"
          height={82}
          preserveAspectRatio="none"
          viewBox="0 0 100 82"
          width="104%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="visx-area-closed"
            d="M0,82L7.142857142857142,81.05339105339105L14.285714285714285,77.50360750360751L21.428571428571427,60.07486631016043L28.57142857142857,76.97113997113998L35.714285714285715,0L42.857142857142854,48.720779220779214L50,33.54197436550378L57.14285714285714,81.05339105339105L64.28571428571429,77.50360750360751L71.42857142857143,60.07486631016043L78.57142857142857,76.97113997113998L85.71428571428571,0L92.85714285714286,48.720779220779214L100,33.54197436550378L100,82L92.85714285714286,82L85.71428571428571,82L78.57142857142857,82L71.42857142857143,82L64.28571428571429,82L57.14285714285714,82L50,82L42.857142857142854,82L35.714285714285715,82L28.57142857142857,82L21.428571428571427,82L14.285714285714285,82L7.142857142857142,82L0,82Z"
            fill="currentColor"
            fillOpacity="10%"
            shapeRendering="geometricPrecision"
            stroke="currentColor"
            strokeLinecap="round"
            strokeWidth={2}
            vectorEffect="non-scaling-stroke"
          />
        </svg>
      </div>
    </div>
    <div
      className="lg:w-2/3 transition group-hover:animate-textpulse px-4 pb-3 pt-36 lg:px-5 lg:py-4 relative z-10"
    >
      <div
        className="grid grid-cols-[24px,1fr] gap-3"
      >
        <span
          className="mt-[1px] inline-block bg-gray-50 w-6 h-6"
        >
          <img
            alt="Sensor Symbol 15"
            src="/images/sensor-symbols/15.svg"
          />
        </span>
        <h3
          className="text-xl leading-6 pt-1 lg:leading-7 lg:text-2xl lg:pt-0 font-headline font-bold inline"
        >
          LUFTY AAB3
        </h3>
      </div>
      <div
        className="pl-9 pt-2"
      >
        <p
          className="text-base mb-4 flex gap-x-1"
        >
          <svg
            className="mt-1"
            height="16"
            role="img"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 .013-.74.814C3.77 4.667 2 7.675 2 10c0 3.412 2.76 6 6 6s6-2.588 6-6c0-2.254-1.664-5.152-4.948-8.826L8 .014Zm-.376 3.43L8 3.007l.111.127C10.716 6.157 12 8.482 12 10c0 2.277-1.837 4-4 4-2.163 0-4-1.723-4-4 0-1.466 1.197-3.684 3.624-6.556Z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
          Luftfeuchtigkeit
        </p>
        <p
          className="text-base"
        >
          Luftqualität im Wagon AAB3 vom Ubahn der Linie 3
        </p>
        <p
          className="mt-4 mb-2 flex gap-2 flex-wrap"
        >
          <span
            className="inline-block truncate"
            style={
              Object {
                "maxWidth": "calc(100vw - 64px)",
              }
            }
          >
            <span
              className="mr-1.5 inline-block align-middle rounded-full border border-gray-50"
              role="img"
              style={
                Object {
                  "height": 21,
                  "width": 21,
                }
              }
            >
              <svg
                fill="none"
                height={20}
                viewBox="0 0 80 80"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <mask
                  height={80}
                  id="mask0"
                  mask-type="alpha"
                  maskUnits="userSpaceOnUse"
                  width={80}
                  x={0}
                  y={0}
                >
                  <rect
                    fill="white"
                    height={80}
                    rx={160}
                    width={80}
                  />
                </mask>
                <g
                  mask="url(#mask0)"
                >
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={20}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={40}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={60}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={10}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={30}
                  />
                  <rect
                    fill="#4A4878"
                    height={10}
                    width={10}
                    x={50}
                  />
                  <rect
                    fill="#9695AE"
                    height={10}
                    width={10}
                    x={70}
                  />
                  <rect
                    fill="#787696"
                    height={10}
                    width={10}
                    y={10}
                  />
                  <rect
                    fill="#F9FCFD"
                    height={10}
                    width={10}
                    y={20}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    y={30}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    y={40}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    y={50}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    y={60}
                  />
                  <rect
                    fill="#100C53"
                    height={10}
                    width={10}
                    y={70}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={20}
                    y={10}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={20}
                    y={20}
                  />
                  <rect
                    fill="#100C53"
                    height={10}
                    width={10}
                    x={20}
                    y={30}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={20}
                    y={40}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={20}
                    y={50}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={20}
                    y={60}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    x={20}
                    y={70}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={40}
                    y={10}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={40}
                    y={20}
                  />
                  <rect
                    fill="#F9FCFD"
                    height={10}
                    width={10}
                    x={40}
                    y={30}
                  />
                  <rect
                    fill="#787696"
                    height={10}
                    width={10}
                    x={40}
                    y={40}
                  />
                  <rect
                    fill="#787696"
                    height={10}
                    width={10}
                    x={40}
                    y={50}
                  />
                  <rect
                    fill="#B4B4C7"
                    height={10}
                    width={10}
                    x={40}
                    y={60}
                  />
                  <rect
                    fill="#9695AE"
                    height={10}
                    width={10}
                    x={40}
                    y={70}
                  />
                  <rect
                    fill="#787696"
                    height={10}
                    width={10}
                    x={60}
                    y={10}
                  />
                  <rect
                    fill="#4A4878"
                    height={10}
                    width={10}
                    x={60}
                    y={20}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={60}
                    y={30}
                  />
                  <rect
                    fill="#100C53"
                    height={10}
                    width={10}
                    x={60}
                    y={40}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={60}
                    y={50}
                  />
                  <rect
                    fill="#9695AE"
                    height={10}
                    width={10}
                    x={60}
                    y={60}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    x={60}
                    y={70}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={10}
                    y={10}
                  />
                  <rect
                    fill="#B4B4C7"
                    height={10}
                    width={10}
                    x={10}
                    y={20}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    x={10}
                    y={30}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={10}
                    y={40}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    x={10}
                    y={50}
                  />
                  <rect
                    fill="#100C53"
                    height={10}
                    width={10}
                    x={10}
                    y={60}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={10}
                    y={70}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={30}
                    y={10}
                  />
                  <rect
                    fill="#787696"
                    height={10}
                    width={10}
                    x={30}
                    y={20}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={30}
                    y={30}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={30}
                    y={40}
                  />
                  <rect
                    fill="#CFD0DC"
                    height={10}
                    width={10}
                    x={30}
                    y={50}
                  />
                  <rect
                    fill="#F9FCFD"
                    height={10}
                    width={10}
                    x={30}
                    y={60}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={30}
                    y={70}
                  />
                  <rect
                    fill="#787696"
                    height={10}
                    width={10}
                    x={50}
                    y={10}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={50}
                    y={20}
                  />
                  <rect
                    fill="#CFD0DC"
                    height={10}
                    width={10}
                    x={50}
                    y={30}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={50}
                    y={40}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={50}
                    y={50}
                  />
                  <rect
                    fill="#332F66"
                    height={10}
                    width={10}
                    x={50}
                    y={60}
                  />
                  <rect
                    fill="#46ECA1"
                    height={10}
                    width={10}
                    x={50}
                    y={70}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={70}
                    y={10}
                  />
                  <rect
                    fill="#E7EAF2"
                    height={10}
                    width={10}
                    x={70}
                    y={20}
                  />
                  <rect
                    fill="#0000C2"
                    height={10}
                    width={10}
                    x={70}
                    y={30}
                  />
                  <rect
                    fill="#F2F3F8"
                    height={10}
                    width={10}
                    x={70}
                    y={40}
                  />
                  <rect
                    fill="#F9FCFD"
                    height={10}
                    width={10}
                    x={70}
                    y={50}
                  />
                  <rect
                    fill="#8330FF"
                    height={10}
                    width={10}
                    x={70}
                    y={60}
                  />
                  <rect
                    fill="#E7EAF2"
                    height={10}
                    width={10}
                    x={70}
                    y={70}
                  />
                </g>
              </svg>
            </span>
            Vogelino
          </span>
        </p>
      </div>
    </div>
  </a>
</div>
`;
